# somni

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml
benches/: benchmark.rs
somni-expr/: CHANGELOG.md  Cargo.toml  README.md
somni-expr/src/: error.rs  function.rs  iter.rs  lib.rs  string_interner.rs  value.rs  visitor.rs
somni-lexer/: Cargo.toml
somni-lexer/src/: lib.rs
somni-parser/: CHANGELOG.md  Cargo.toml  README.md
somni-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs
somni-template/: CHANGELOG.md  Cargo.toml  README.md
somni-template/src/: env.rs  error.rs  lib.rs  parse.rs  scan.rs  syntax.rs  transpile.rs  value.rs
somni-template/tests/: render.rs  template.rs
somni-template/tests/template/bullet_list/: output  program.sm  template
somni-template/tests/template/c_comment/: output  program.sm  template
somni-template/tests/template/c_comment_loop/: program.sm  template
somni-template/tests/template/c_line_comment/: output  program.sm  template
somni-template/tests/template/conditional/: output  program.sm  template
somni-template/tests/template/greeting/: output  program.sm  template
somni-template/tests/template/report/: output  program.sm  template
somni-template/tests/template/struct_equality/: output  program.sm  template
somni-template/tests/template/struct_fields/: output  program.sm  template
somni-template/tests/template/struct_iterator/: program.sm  template
somni-template/tests/template/struct_nested_iterator/: output  program.sm  template
somni-template/tests/template/table/: output  program.sm  template
somni-template/tests/template/word_list/: output  program.sm  template
src/: ast.rs  codegen.rs  compiler.rs  error.rs  eval.rs  ir.rs  lexer.rs  lib.rs  parser.rs  string_interner.rs  test.rs  transform_ir.rs  types.rs  variable_tracker.rs  vm.rs
tests/compiler/: assign_to_global_const.sm  assign_to_global_const.stderr  assign_to_local_const.sm  assign_to_local_const.stderr  block_return_type_error.sm  break_outside_loop.sm  continue_outside_loop.sm  deref.sm  deref_type.sm  external_fn.sm  external_fn_not_declared.sm  for_not_iterable.sm  global_const_type_error.sm  global_const_type_error.stderr  global_eval_error.sm  global_type_error.sm  pass_by_reference.sm  reference_to_constant.sm  simple.sm  type_error.sm
tests/compiler/assign_to_global_const/: ast  ir.disasm  unoptimized.disasm
tests/compiler/assign_to_local_const/: ast  ir.disasm  ir.transformed.disasm  stderr  unoptimized.disasm
tests/compiler/block_return_type_error/: ast  ir.disasm  stderr
tests/compiler/break_outside_loop/: ast  stderr
tests/compiler/continue_outside_loop/: ast  stderr
tests/compiler/deref/: ast  ir.disasm  ir.transformed.disasm  unoptimized.disasm
tests/compiler/deref_type/: ast  ir.disasm  stderr
tests/compiler/external_fn/: ast  ir.disasm  ir.transformed.disasm  unoptimized.disasm
tests/compiler/external_fn_not_declared/: ast  ir.disasm  ir.transformed.disasm  stderr
tests/eval/: fibonacci.sm  for_element_type_mismatch.sm  for_loop.sm  func.sm  globals.sm  loops.sm  multiply.sm  operators.sm  reference.sm  scope.sm  shortcut.sm  simple.sm  struct_bench.sm  structs.sm
tests/eval/func/: ast  (+5 more)
tests/parser/: constant.sm  implicit_return.sm  left_hand_binary_operator.sm  left_hand_literal.sm  left_hand_operator.sm  valid.sm
xtask/: Cargo.toml
xtask/src/: main.rs
(+90 files in other folders)
