[package]
name = "somni"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
description = "Somni scripting language and VM"
keywords = ["expression", "script", "language", "evaluator", "eval"]
categories = ["compilers"]
repository = "https://github.com/bugadani/somni"
license = "MIT OR Apache-2.0"


[[bench]]
name = "benchmark"
harness = false

[workspace.dependencies]
indexmap = "2"
criterion = "0.6"
ansi-parser = "0.9"
pretty_assertions = "1.4"

[dependencies]
indexmap.workspace = true
somni-parser = { version = "0.1.0", path = "somni-parser" }
somni-expr = { version = "0.1.0",path = "somni-expr" }

[dev-dependencies]
criterion.workspace = true
ansi-parser.workspace = true
pretty_assertions.workspace = true

[profile.release]
debug = true

[workspace]
members = [
    ".",
    "xtask",
    "somni-parser",
    "somni-expr",
]
