[package]
name = "somni"
version = "0.2.0"
edition = "2021"
rust-version = "1.82.0"
description = "Somni scripting language and VM"
keywords = ["expression", "script", "language", "evaluator", "eval"]
categories = ["compilers"]
repository = "https://github.com/bugadani/somni"
license = "MIT OR Apache-2.0"


[[bench]]
name = "benchmark"
harness = false

[workspace.dependencies]
somni-parser = { version = "0.2",path = "somni-parser" }
somni-expr = { version = "0.2",path = "somni-expr" }

indexmap = "2"
criterion = "0.6"
ansi-parser = "0.9"
pretty_assertions = "1.4"

[dependencies]
ansi-parser.workspace = true # FIXME this is needed by a hack to obtain nested errors
indexmap.workspace = true
somni-parser.workspace = true
somni-expr.workspace = true

[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true

[profile.release]
debug = true

[workspace]
members = [
    ".",
    "xtask",
    "somni-parser",
    "somni-expr",
]
