[package]
name = "somni-parser"
version = "0.3.0"
edition = "2024"
rust-version = "1.85.0"
description = "Grammar parser of the Somni language and VM"
keywords = ["expression", "script", "language", "evaluator", "eval"]
categories = ["compilers"]
repository = "https://github.com/bugadani/somni"
license = "MIT OR Apache-2.0"
