[package]
name = "somni-template"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
description = "A configurable templating engine built on the Somni expression language"
keywords = ["template", "templating", "script", "somni", "engine"]
categories = ["template-engine"]
repository = "https://github.com/bugadani/somni"
license = "MIT OR Apache-2.0"

[dependencies]
somni-parser.workspace = true
somni-expr.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
